# GraphTools

./: .clang-format  .gitignore  CMakeLists.txt  Graph.cpp  Graph.sln  Graph.vcxproj  Graph.vcxproj.filters  GraphAlgorithms.hpp  GraphBase.hpp  README.md  main_launch.cpp
src/: GraphAlgorithms.hpp  GraphBase.hpp  GraphCommon.hpp  GraphContainer.hpp  GraphMisc.hpp
test/: CMakeLists.txt  tests.cpp
